# Guelph-Navigator

./: README.md
backend/: .editorconfig  .gitignore  Backend.sln  CMakeLists.txt  backend.sln  conanfile.txt  install_instructions.txt  jsoncppinstall.txt
backend/Backend/: Backend.csproj  Program.cs
backend/Backend/Controllers/: BuildingController.cs  SpotController.cs  TestingController.cs
backend/Backend/Models/: Building.cs  Spot.cs
backend/Backend/Utilities/: Neo4jResultUtils.cs
backend/Backend/interactions/: AddNode.cs  DeleteNode.cs
backend/backend/: Program.cs  WeatherForecast.cs  backend.csproj  helloWorld.cs
backend/backend/Controllers/: BuildingController.cs  SpotController.cs  WeatherForecastController.cs
backend/backend/Models/: Building.cs  Spot.cs
backend/backend/Properties/: launchSettings.json
backend/backend/Utilities/: Neo4jResultUtils.cs
backend/backend/interactions/: AddNode.cs  DeleteNode.cs
backend/backend/nodeProperties/: Building.cs  Spot.cs
backend/src/: main  main.cpp  main.hpp
backend/src/routes/Locations/: Get.cpp  Locations.hpp  recieve.cpp
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
frontend/src/components/: squareButton.css  squareButton.js  wheretoBar.css  wheretoBar.js
frontend/src/connect/: index.js
frontend/src/pages/: connections.js  next.conf.js
frontend/src/pages/components/: map.css  map.js  photosphere.js  wheretoBar.css  wheretoBar.js
frontend/src/pages/map/: index.css  index.js
frontend/src/pages/navigation/: index.js
(+1 files in other folders)
